[tool.poetry]
name = "dvmn_lesson7"
version = "0.1.0"
description = "Buses on a map"
authors = ["Dmitry Plevkov <wwarne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
trio-websocket = "^0.8.1"
click = "^7.1.2"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
